added functionality, messy code

--- a/index.html
+++ b/index.html
@@ -14,21 +14,76 @@
   <h1>Fruit, Vegetable, or Rapper..?</h1>
 </header>
 <body>
-  <section class="questions">
+  <!--OVERLAY--------->
+  <section class="container">
+    <div class="overlay">
+      <div class='buttonposition'>
+      <button class='xbutton'>EXIT</button>
+      </div>
+    <p class="questiontext"></p>
+    </div>
+  </section>
+
+  <!--QUESTIONS----->
+  <section id ="ques1"class="questions">
   <h2>1. An Apple??</h2>
   </section>
-  <section class="answers">
-    <button id="b1">A FRUIT</button>
-    <button id="b2">A VEGETABLE</button>
-    <button id="b3">A RAPPER</button>
+  <section id="ques2"class="questions">
+  <h2>2. Gucci Mane??</h2>
   </section>
+  <section id="ques3"class="questions">
+  <h2>3. Pears??</h2>
+  </section>
+  <section id="ques4"class="questions">
+  <h2>4. Future??</h2>
+  </section>
+  <section id="ques5"class="questions">
+  <h2>5. Oranges??</h2>
+  </section>
+
+  <!--set 1 answers-->
+  <section id="set1" class="answers">
+    <button class="b1">A FRUIT</button>
+    <button class="b2">A VEGETABLE</button>
+    <button class="b3">A RAPPER</button>
+  </section>
+
+  <!--set 2 anwsers-->
+  <section id="set2"class="answers">
+    <button class="b1_2">A FRUIT</button>
+    <button class="b2_2">A PATATO</button>
+    <button class="b3_2">A RAPPER</button>
+  </section>
+
+  <!--set 3 answers-->
+  <section id="set3"class="answers">
+    <button class="b1_3">A FRUIT</button>
+    <button class="b2_3">A VEGETABLE</button>
+    <button class="b3_3">RICK ROSS</button>
+  </section>
+
+  <!--set 4 answers-->
+  <section id="set4"class="answers">
+    <button class="b1_4">A FRUIT</button>
+    <button class="b2_4">A VEGETABLE</button>
+    <button class="b3_4">A RAPPER</button>
+  </section>
+
+  <!--set 5 answers-->
+  <section id="set5"class="answers">
+    <button class="b1_5">A FRUIT</button>
+    <button class="b2_5">A VEGETABLE</button>
+    <button class="b3_5">A RAPPER</button>
+  </section>
+
+  <!--Progress boxes-->
   <section class="boxes">
     <h2 class="progress">Progress</h2>
-    <div class="box"></div
-    ><div class="box"></div
-    ><div class="box"></div
-    ><div class="box"></div
-    ><div class="box"></div>
+    <div class="box first"></div
+    ><div class="box second"></div
+    ><div class="box third"></div
+    ><div class="box fourth"></div
+    ><div class="box fifth"></div>
 
   </section>
 
